Seed Data and Roles Table added